<resources>
    <string name="app_name">Chat</string>
    <string name="login">登录</string>
    <string name="password">密码：</string>
    <string name="username">用户名：</string>
    <string name="quit">退出</string>
    <string name="register">注册</string>
    <string name="welcome_login">请登录!</string>
    <string name="welcome_register">请注册!</string>
    <string name="password_repeat">重复密码：</string>
    <string name="auto_login">自动登录</string>
    <string name="remember_password">记住密码</string>
    <string name="title_activity_login2">LoginActivity2</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="avatar">头像</string>
    <string name="clear">清除所有信息</string>
    <string name="get">get</string>
    <string name="setAvatar">设置头像</string>
    <string name="search_contact">搜索用户</string>
    <string name="image">image</string>
    <string name="send">send</string>
    <string name="inputSomething">输入…</string>
    <string name="test">test</string>
    <string name="startService">startService</string>
    <string name="contactList">联系人</string>
    <string name="logout">登出账号</string>
    <string name="local">local</string>
    <string name="internet">internet</string>
    <string name="online">online</string>
    <string name="offline">offline</string>
    <string name="noAnything"> </string>
    <string name="localOff">已关闭局域网</string>
    <string name="localOn">已打开局域网</string>
    <string name="swipeRefresh_behavior">swipeRefresh_behavior</string>
    <string name="PhotoAlbum">相册</string>
</resources>