<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".RegisterActivity">

    <TextView
        android:id="@+id/text1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="3dp"
        android:text="@string/welcome_register"
        android:textSize="22sp"
        app:layout_constraintBottom_toTopOf="@id/editName"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <EditText
        android:id="@+id/editName"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="3dp"
        android:autofillHints="username"
        android:hint="@string/username"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@id/editPassword"
        app:layout_constraintHeight_percent="0.07"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text1"
        app:layout_constraintWidth_percent="0.6" />

    <EditText
        android:id="@+id/editPassword"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:autofillHints="password"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@id/editPasswordRepeat"
        app:layout_constraintHeight_percent="0.07"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editName"
        app:layout_constraintWidth_percent="0.6" />

    <EditText
        android:id="@+id/editPasswordRepeat"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="9dp"
        android:autofillHints="password"
        android:hint="@string/password_repeat"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@id/buttonRegister"
        app:layout_constraintHeight_percent="0.07"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editPassword"
        app:layout_constraintWidth_percent="0.6" />

    <Button
        android:id="@+id/buttonRegister"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="3dp"
        android:onClick="onClick"
        android:text="@string/register"
        android:background="@color/button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHeight_percent="0.07"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editPasswordRepeat"
        app:layout_constraintWidth_percent="0.6" />

</androidx.constraintlayout.widget.ConstraintLayout>