<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_v">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/contactToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:layout_constraintBottom_toTopOf="@id/contactRecycleView"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/Theme.AppCompat.Light">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/contactToolbarImageView"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginEnd="10dp"
                android:contentDescription="@string/image"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@id/contactTitle"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/contactTitle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text=""
                android:textColor="@color/boldTextColor"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toRightOf="@id/contactToolbarImageView"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.appcompat.widget.Toolbar>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/contactRecycleView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/Bottom"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintTop_toBottomOf="@id/contactToolbar" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/Bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="30dp"
        app:layout_constraintBottom_toBottomOf="parent">

        <EditText
            android:id="@+id/inputText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:hint="@string/inputSomething"
            android:inputType="textMultiLine"
            android:maxLines="5"
            app:layout_constraintHorizontal_weight="5"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/choseImage"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/choseImage"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:contentDescription="@string/PhotoAlbum"
            android:onClick="onClick"
            android:src="@drawable/ic_image_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/inputText"
            app:layout_constraintRight_toLeftOf="@id/sendMessage"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/sendMessage"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginEnd="10dp"
            android:contentDescription="@string/send"
            android:onClick="onClick"
            android:src="@drawable/ic_send_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/choseImage"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>